--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,118 @@
   font: bold 14px Arial, sans-serif;
 }
 
-/* #calculator {
-	width: 325px;
-	height: auto;
-	
-	margin: 100px auto;
-	padding: 20px 20px 9px;
-	
-	background: #9dd2ea;
-	background: linear-gradient(#9dd2ea, #8bceec);
-	border-radius: 3px;
-	box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
-} */
+#calculator{
+  width: 325px;
+  height: auto;
+
+  margin: 100px auto;
+  padding: 20px 20px 9px;
+
+  background: #9dd2ea;
+  background: linear-gradient(#9dd2ea, #8bceec);
+  border-radius: 3px;
+  box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Display Screen */
+#display #clear{
+  float: left;
+}
+
+#display .screen{
+  height: 40px;
+  width: 212px;
+  float: right;
+  padding: 0 10px;
+
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 3px;
+  box-shadow: inset 0px 4px rgba(0, 0, 0, 0.4);
+
+  /* Typography */
+  font-size: 17px;
+  line-height: 40px;
+  color: white;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
+  text-align: right;
+  letter-spacing: 1px;
+} 
+
+/* Clear floats */
+#display, #input-container{
+  overflow: hidden;
+}
+
+#input-container button, #display button {
+  float: left;
+  position: relative;
+  top: 0;
+  
+  cursor: pointer;
+  
+  width: 66px;
+  height: 36px;
+  margin: 0 7px 11px 0;
+
+  background: white;
+  border-radius: 3px;
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+  
+  color: #888;
+  text-align: center;
+  user-select: none;
+  transition: all 0.2s ease;
+}
+
+/* Style spacial keys */
+.operator{
+  background: #FFF0F5 !important;
+	margin-right: 0 !important;
+}
+
+.calculate{
+  background: #f1ff92 !important;
+  box-shadow: 0px 4px #9da853 !important;
+	color: #888e5f !important;
+}
+
+#clear{
+  background: #ff9fa8 !important;
+	box-shadow: 0px 4px #ff7c87 !important;
+	color: white !important;
+}
+
+/* Some hover effects */
+#input-container button:hover {
+	background: #9c89f6;
+	box-shadow: 0px 4px #6b54d3;
+	color: white;
+}
+
+#input-container button.calculate:hover {
+	background: #abb850 !important;
+	box-shadow: 0px 4px #717a33 !important;
+	color: #ffffff !important;
+}
+
+#display button#clear:hover {
+	background: #f68991 !important;
+	box-shadow: 0px 4px #d3545d !important;
+	color: white;
+}
+
+/* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
+#input-container button:active {
+	box-shadow: 0px 0px #6b54d3 !important;
+	top: 4px !important;
+}
+
+#input-container button.calculate:active {
+	box-shadow: 0px 0px #717a33;
+	top: 4px;
+}
+
+#display button.clear:active {
+	top: 4px;
+	box-shadow: 0px 0px #d3545d;
+}
